# fltgst

app/fltgst/: README.md  pubspec.yaml
app/fltgst/android/app/: build.gradle
app/fltgst/android/app/src/main/: AndroidManifest.xml
app/fltgst/android/app/src/main/kotlin/com/example/fltgst/: MainActivity.kt
app/fltgst/ios/Runner/: Info.plist
app/fltgst/ios/Runner.xcodeproj/: project.pbxproj
app/fltgst/lib/: main.dart
app/fltgst/linux/: CMakeLists.txt  my_application.cc
app/fltgst/linux/flutter/: generated_plugins.cmake
app/fltgst/macos/Runner.xcodeproj/: project.pbxproj
app/fltgst/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/fltgst/macos/Runner/Configs/: AppInfo.xcconfig
app/fltgst/test/: widget_test.dart
app/fltgst/web/: index.html  manifest.json
app/fltgst/windows/: CMakeLists.txt
app/fltgst/windows/flutter/: generated_plugins.cmake
app/fltgst/windows/runner/: Runner.rc  main.cpp
app/native_binding/: .metadata  README.md  ffigen.yaml  pubspec.yaml
app/native_binding/android/: build.gradle  settings.gradle
app/native_binding/android/src/main/: AndroidManifest.xml
app/native_binding/android/src/main/java/com/example/native_binding/: NativeView.kt
app/native_binding/example/: README.md  pubspec.yaml
app/native_binding/example/android/app/: build.gradle
app/native_binding/example/android/app/src/main/: AndroidManifest.xml
app/native_binding/example/android/app/src/main/kotlin/com/example/native_binding_example/: MainActivity.kt
app/native_binding/example/ios/Runner/: Info.plist
app/native_binding/example/ios/Runner.xcodeproj/: project.pbxproj
app/native_binding/example/lib/: main.dart
app/native_binding/example/linux/: CMakeLists.txt  my_application.cc
app/native_binding/example/linux/flutter/: generated_plugins.cmake
app/native_binding/example/macos/Runner.xcodeproj/: project.pbxproj
app/native_binding/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/native_binding/example/macos/Runner/Configs/: AppInfo.xcconfig
app/native_binding/example/windows/: CMakeLists.txt
app/native_binding/example/windows/runner/: Runner.rc  main.cpp
app/native_binding/ios/: native_binding.podspec
app/native_binding/ios/Classes/: gst_ios_init.m  native_binding.c
app/native_binding/lib/: native_binding.dart  native_binding_bindings_generated.dart
app/native_binding/linux/: CMakeLists.txt
app/native_binding/macos/: native_binding.podspec
app/native_binding/src/: CMakeLists.txt  gst_android.c.in  gst_ios_init.h  gst_plugin_init_android.c  native_binding.c  native_binding.h
app/native_binding/windows/: CMakeLists.txt
app/native_view/: README.md  pubspec.yaml
app/native_view/android/: build.gradle  settings.gradle
app/native_view/android/src/main/: AndroidManifest.xml
app/native_view/android/src/main/kotlin/com/example/native_view/: NativeView.kt  NativeViewFactory.kt  NativeViewPlugin.kt  TextView.kt  TextViewFactory.kt
app/native_view/android/src/test/kotlin/com/example/native_view/: NativeViewPluginTest.kt
app/native_view/example/: README.md  pubspec.yaml
app/native_view/example/android/app/: build.gradle
app/native_view/example/android/app/src/main/: AndroidManifest.xml
app/native_view/example/android/app/src/main/kotlin/com/example/native_view_example/: MainActivity.kt
app/native_view/example/integration_test/: plugin_integration_test.dart
app/native_view/example/ios/Runner/: Info.plist
app/native_view/example/ios/Runner.xcodeproj/: project.pbxproj
app/native_view/example/ios/RunnerTests/: RunnerTests.swift
app/native_view/example/lib/: main.dart
app/native_view/example/linux/: CMakeLists.txt  my_application.cc
app/native_view/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/native_view/example/macos/Flutter/: GeneratedPluginRegistrant.swift
app/native_view/example/macos/Runner.xcodeproj/: project.pbxproj
app/native_view/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/native_view/example/macos/Runner/Configs/: AppInfo.xcconfig
app/native_view/example/macos/RunnerTests/: RunnerTests.swift
app/native_view/example/test/: widget_test.dart
app/native_view/example/windows/: CMakeLists.txt
app/native_view/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/native_view/example/windows/runner/: Runner.rc  main.cpp
app/native_view/ios/: native_view.podspec
app/native_view/ios/Classes/: NativeViewPlugin.swift
app/native_view/lib/: fltgst_native_view.dart  native_view.dart  native_view_method_channel.dart  native_view_platform_interface.dart
app/native_view/linux/: CMakeLists.txt  native_view_plugin.cc  native_view_plugin_private.h
app/native_view/linux/include/native_view/: native_view_plugin.h
app/native_view/linux/test/: native_view_plugin_test.cc
app/native_view/macos/: native_view.podspec
app/native_view/macos/Classes/: NativeViewPlugin.swift
app/native_view/test/: native_view_method_channel_test.dart  native_view_test.dart
app/native_view/windows/: CMakeLists.txt  native_view_plugin.cpp  native_view_plugin.h  native_view_plugin_c_api.cpp
app/native_view/windows/include/native_view/: native_view_plugin_c_api.h
app/native_view/windows/test/: native_view_plugin_test.cpp
cfile/: CMakeLists.txt  main.c
